--- a/angular-ui/src/app/modules/dashboard/maps-section/maps-section.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/maps-section.component.html
@@ -18,6 +18,8 @@
 			<!-- vista lista -->
 			<app-list-view #listView
         *ngIf="isListView"
+        (sort)="sort($event)"
+        [sorting]="sorting"
         [maps]="maps"
         (onClick)="onClick($event)"
         (onContextMenu)="onContextMenu($event)"
