--- a/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.html
@@ -2,11 +2,11 @@
     <mat-drawer-container autosize class="drawer-container">
         <div>
             <ng-container *ngFor="let map of maps">
-                <div class="container-file" (click)="map && click($event,map)" (contextmenu)="contextMenu($event, map)"
+                <div matTooltip="{{ map.name}}.{{ map.ext }}" matTooltipShowDelay="500" class="container-file" (click)="map && click($event,map)" (contextmenu)="contextMenu($event, map)"
                     (dblclick)="dblClickEvent(map)"
                     [ngClass]="{'selected': selectedMaps.includes(map),'firstSelectedMap': firstSelectedMap == map.id }">
                     <div class="file">
-        
+
                     </div>
                     <div class="name-file">
                         <p>{{ map.name}}.{{ map.ext }}</p>
