--- a/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.css
+++ b/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.css
@@ -37,8 +37,13 @@
 	margin-right: 10px;
 }
 
-.icon-ordenar mat-icon{
-	font-size: 16px;
+.icon-ordenar {
+  cursor: pointer;
+}
+
+.icon-ordenar mat-icon {
+  font-size: 16px;
+  translate: 0 3px;
 }
 
 .contenido-expanded{
@@ -63,20 +68,20 @@ tr.example-detail-row {
   /* tr.example-element-row:not(.example-expanded-row):hover {
 	background: whitesmoke;
   }
-  
+
   tr.example-element-row:not(.example-expanded-row):active {
 	background: #efefef;
   } */
-  
+
 .example-element-row td {
 	border-bottom-width: 0;
 }
-  
+
 .example-element-detail {
 	overflow: hidden;
 	display: flex;
 }
-  
+
 .example-element-diagram {
 	min-width: 80px;
 	border: 2px solid black;
@@ -85,17 +90,17 @@ tr.example-detail-row {
 	margin: 8px 0;
 	height: 104px;
 }
-  
+
 .example-element-symbol {
 	font-weight: bold;
 	font-size: 40px;
 	line-height: normal;
 }
-  
+
 .example-element-description {
 	padding: 16px;
 }
-  
+
 .example-element-description-attribution {
 	opacity: 0.5;
 }
