--- a/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
@@ -63,6 +63,18 @@
                     </td>
                 </ng-container>
             </div>
+
+            <!-- Expansion button -->
+            <div>
+              <ng-container matColumnDef="expand">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button class="expand-button" (click)="$event.preventDefault(); toggleExpanded(element)">
+                    <mat-icon>{{element == expandedElement ? 'expand_less' : 'expand_more'}}</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+            </div>
         </div>
 
         <ng-container matColumnDef="expandedDetail">
@@ -78,8 +90,9 @@
 
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
+        <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="container-file"
             [class.example-expanded-row]="expandedElement === element"
+            [ngClass]="{'selected': selectedMaps.includes(element),'firstSelectedMap': firstSelectedMap == element.id }"
             (contextmenu)="contextMenu($event, element)"
             (click)="reportClickEvent($event, element)">
         </tr>
